# JeFit2Hevy

./: .gitignore  README.md  converter.py  exercises.json
NextJsApp/: eslint.config.mjs  next-sitemap.config.js  next.config.js  package-lock.json  package.json
NextJsApp/public/: exercises.json  robots.txt  sitemap-0.xml  sitemap.xml
NextJsApp/src/app/: layout.tsx  page.tsx
NextJsApp/src/app/api/create-checkout-session/: route.ts
NextJsApp/src/components/: faq.tsx  file-uploader.tsx  footer.tsx  header.tsx  payment.tsx
NextJsApp/src/types/: clarity.d.ts  gtag.d.ts
python-script/: .gitignore  README.md  converter.py  pyproject.toml
